<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="151dp">

        <ImageView
            android:id="@+id/img_civilization_fac"
            android:layout_width="88dp"
            android:layout_height="83dp"
            android:contentDescription="@string/image_of_civilization"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_blason" />

        <TextView
            android:id="@+id/civilization_name"
            android:layout_width="275dp"
            android:layout_height="21dp"
            android:hint="@string/civilization_name"
            app:layout_constraintEnd_toStartOf="@+id/include2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/civilization_expansion"
            android:layout_width="275dp"
            android:layout_height="29dp"
            android:hint="@string/civilization_expansion"
            app:layout_constraintEnd_toStartOf="@+id/include2"
            app:layout_constraintTop_toBottomOf="@+id/civilization_name" />

        <TextView
            android:id="@+id/civilization_bonus"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:hint="@string/civilization_bonus"
            app:layout_constraintEnd_toStartOf="@+id/include2"
            app:layout_constraintTop_toBottomOf="@+id/civilization_expansion" />

        <include
            android:id="@+id/include2"
            layout="@layout/card_info_unfav"
            android:layout_width="47dp"
            android:layout_height="125dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>