<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_list_civilization_layout_home"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="145dp">

        <TextView
            android:id="@+id/civilization_name"
            android:layout_width="275dp"
            android:layout_height="21dp"
            android:hint="@string/civilization_name"
            app:layout_constraintEnd_toStartOf="@+id/include"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/civilization_expansion"
            android:layout_width="274dp"
            android:layout_height="19dp"
            android:hint="@string/civilization_expansion"
            app:layout_constraintEnd_toStartOf="@+id/include"
            app:layout_constraintTop_toBottomOf="@+id/civilization_name" />

        <TextView
            android:id="@+id/civilization_bonus"
            android:layout_width="274dp"
            android:layout_height="86dp"
            android:layout_marginBottom="19dp"
            android:hint="@string/civilization_bonus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/include"
            app:layout_constraintTop_toBottomOf="@+id/civilization_expansion" />

        <include
            android:id="@+id/include"
            layout="@layout/card_info_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img_civilization"
            android:layout_width="88dp"
            android:layout_height="83dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_blason"
            android:contentDescription="@string/image_civilization" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>